force-app/main/default/objects/Syndication_Participation__c/Syndication_Participation__c.object-meta.xml
<CustomObject>
    <label>Syndication Participation</label>
    <nameField>
        <displayFormat>SynPart-{0000}</displayFormat>
        <label>Syndication_Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Syndication Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>