force-app/main/default/objects/Syndication_Participation__c/fields/Participating_Account__c.field-meta.xml
<CustomField>
    <fullName>Participating_Account__c</fullName>
    <label>Participating Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Syndication Participations</relationshipLabel>
    <relationshipName>Syndication_Participations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>