force-app/main/default/objects/Syndication_Participation__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Bank</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Observer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>